--- a/veggie-app/Views/Shared/_Layout.cshtml
+++ b/veggie-app/Views/Shared/_Layout.cshtml
@@ -21,7 +21,18 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav mr-auto">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Users" asp-action="Index">Usuarios</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Categories" asp-action="Index">Categoría</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="Index">Productos</a>
+                        </li>
                     </ul>
                     <span class="navbar-text">
                         <button type="button" style="font-family: roboto;" class="btn btn-light">Iniciar sesión</button>
